# IVS-calculator

./: CMakeLists.txt  Makefile  build_script.sh  gui_zaloha.txt  hodnoceni.txt  skutecnost.txt
docs/: README.md
install/: how_to_install.txt
profiling/: vystup.txt
repo/: .editorconfig  README.md  hodnoceni.txt  skutecnost.txt
repo/profiling/: vystup.txt  zprava.txt
repo/src/: Doxyfile  Makefile  calculator.py  gui.py  math_lib.py  profile.sh  test_math_lib.py
src/: Makefile  calculator.py  gui.py  logic.py  main.py  math_lib.py  profile.sh  stddev.py  test_gui.py  test_math_lib.py
tests/: test_calculator.py  test_gui.py  test_math_lib.py
